--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ p{
     width: 60vw;
     color: black;
     float: right;
-    /* font-size: 100px; */
+    font-size: 100px;
     padding-top:10vh;
 }
 #header{
